[gd_scene load_steps=3 format=3 uid="uid://b7yokb5iixl7i"]

[ext_resource type="Script" uid="uid://cijsbwmklnkjy" path="res://menus/hud.gd" id="1_633jc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_633jc"]
bg_color = Color(0.484066, 0.0761015, 0.0821945, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_633jc")

[node name="HomeButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.91
anchor_top = 0.84
anchor_right = 0.987
anchor_bottom = 0.975
offset_left = -0.320068
offset_top = -0.320007
offset_right = -0.0240479
offset_bottom = 0.200012
grow_horizontal = 2
grow_vertical = 2
text = "HOME"

[node name="NextLevelButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.819
anchor_top = 0.84
anchor_right = 0.897
anchor_bottom = 0.975
offset_left = 0.511902
offset_top = -0.320007
offset_right = -0.343994
offset_bottom = 0.200012
grow_horizontal = 2
grow_vertical = 2
text = "NEXT
LEVEL"

[node name="MuteAudio" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.911
anchor_top = 0.034
anchor_right = 0.989
anchor_bottom = 0.17
offset_left = 0.527954
offset_top = -0.0320015
offset_right = -0.328003
offset_bottom = -0.160004
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_633jc")
toggle_mode = true
text = "MUTE
AUDIO"

[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="toggled" from="MuteAudio" to="." method="_on_mute_audio_toggled"]
